# quest_framework

./: .env  .gitignore  2main.py  Readme.md  ReleaseNotes.md  caching.py  checkpointing.py  demo.py  int_handle_manual.py  int_handle_testing.py  load_history.py  main-single.py  main.py  main2.py  main_old.py  numGuessGame.py  play_multi_guess.py  pyproject.toml  temp.py  test_interrupt_handling.py  test_kill_unix.py  test_kill_windows.py  ubuntu_process.py
demos/: flexible_multi_guess.py  guessing_game.py  multiGuessQueue.py  multi_guess_client.py  multi_guess_server.py  registration.py  simple_client.py  simple_server.py  singleGuessQueue.py  test_multiqueue.py
game-state/: Guessing_Game.05d92d7a7ae866cb9d7b67a7b75bf04d.json  Guessing_Game.191769abfca2bdb17f7ec3e7dc1cb5a9.json  Guessing_Game.e3558ace3dc29dd7cf2378fa6d9bf518.json  Guessing_Game.eee8e057ba935197ba996a75a8c56834.json  Guessing_Game.json  game1.106e928f60a4b5f0014e9e12c4d4fb36.json  game1.c31c10c14d3b027a98ecb895e22950d7.json  game1.e93f4ccd77b8e5459398b4eb27de6a73.json  game1.f143a1119eaa2b7e3c52138f222d5b0c.json  game1.json  number-game.json
history_test/: multiguess.py  pytest.ini  test_alias.py  test_basic.py  test_basic_tasks.py  test_configuration.py  test_context.py  test_external_actions.py  test_get_exception_class.py  test_get_result.py  test_historian.py  test_interruptions.py  test_manager.py  test_persistence.py  test_resource_stream.py  test_serializer.py  test_step_concurrency.py  test_step_error.py  test_suspend.py  test_versioning.py  test_websockets.py  test_workflow_metrics.py  test_wrappers.py  utils.py
multi_guess_game/: game.py
multi_guess_src/: multi_guess_queue.py  multi_guess_terminal.py
quest/: __init__.py  context.py  default_seralizers.py  events.py  json_seralizers.py  scratch.py  (+3 more)
(+170 files in other folders)
