[tool.poetry]
name = "quest"
version = "0.1.3"
description = "Build fault-tolerant"
authors = ["Gordon Bean <gbean@cs.byu.edu>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"
pytest-asyncio = "^0.21.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
