[tool.poetry]
name = "quest.py"
version = "0.2.0"
description = "Framework for coordinated, long-running processes"
authors = ["Gordon Bean <gbean@cs.byu.edu>"]
packages = [{include = "quest", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
